packages/java/src/main/resources/natives/macos-arm64/include/ts_pack.h

/**
 * A byte range â start (inclusive) to end (exclusive).
 */
typedef struct TS_PACKByteRange TS_PACKByteRange;
/**
 * Manages downloading and caching of pre-built parser shared libraries.
 */
typedef struct TS_PACKDownloadManager TS_PACKDownloadManager;
typedef struct TS_PACKLanguage TS_PACKLanguage;
/**
 * Thread-safe registry of tree-sitter language parsers.
 *
 * Manages both statically compiled and dynamically loaded language grammars.
 * Use `LanguageRegistry.new()` for the default registry, or access the
 * global instance via the module-level convenience functions
 * (`get_language`, `available_languages`, etc.).
 * \code
 * use tree_sitter_language_pack::{LanguageRegistry, ProcessConfig};
 *
 * let registry = LanguageRegistry::new();
 * let langs = registry.available_languages();
 * println!("Available: {:?}", langs);
 *
 * let config = ProcessConfig::new("python").all();
 * let result = registry.process("def hello(): pass", &config).unwrap();
 * println!("Structure: {:?}", result.structure);
 * \endcode
 */
typedef struct TS_PACKLanguageRegistry TS_PACKLanguageRegistry;
/**
 * A single syntax node within a `Tree`.
 *
 * Nodes hold a strong reference to their parent tree so they remain valid
 * regardless of how the tree is moved or stored at the FFI boundary.
 */
typedef struct TS_PACKNode TS_PACKNode;
/**
 * Configuration for the tree-sitter language pack.
 *
 * Controls cache directory and which languages to pre-download.
 * Can be loaded from a TOML file, constructed programmatically,
 * or passed as a dict/object from language bindings.
 * \code
 * use tree_sitter_language_pack::PackConfig;
 *
 * let config = PackConfig {
 *     cache_dir: None,
 *     languages: Some(vec!["python".to_string(), "rust".to_string()]),
 *     groups: None,
 * };
 * \endcode
 */
typedef struct TS_PACKPackConfig TS_PACKPackConfig;
/**
 * A tree-sitter parser configured for one language at a time.
 * \code
 * use tree_sitter_language_pack::Parser;
 *
 * let mut parser = Parser::new();
 * parser.set_language("python")?;
 * let tree = parser.parse("def hello(): pass").expect("parse failed");
 * assert_eq!(tree.root_node().kind(), "module");
 * # Ok::<(), tree_sitter_language_pack::Error>(())
 * \endcode
 */
typedef struct TS_PACKParser TS_PACKParser;
/**
 * A source position â row + column, zero-indexed.
 */
typedef struct TS_PACKPoint TS_PACKPoint;
/**
 * Configuration for the `process()` function.
 *
 * Controls which analysis features are enabled and whether chunking is performed.
 * \code
 * use tree_sitter_language_pack::ProcessConfig;
 *
 * // Defaults: structure + imports + exports enabled
 * let config = ProcessConfig::new("python");
 *
 * // With chunking
 * let config = ProcessConfig::new("python").with_chunking(1000);
 *
 * // Everything enabled
 * let config = ProcessConfig::new("python").all();
 * \endcode
 */
typedef struct TS_PACKProcessConfig TS_PACKProcessConfig;
/**
 * Complete analysis result from processing a source file.
 *
 * Contains metrics, structural analysis, imports/exports, comments,
 * docstrings, symbols, diagnostics, and optionally chunked code segments.
 * Fields are populated based on the `ProcessConfig` flags.
 *
 * # Fields
 *
 * - `language` - The language used for parsing
 * - `metrics` - Always computed: line counts, byte sizes, error counts
 * - `structure` - Functions, classes, structs (when `config.structure = true`)
 * - `imports` - Import statements (when `config.imports = true`)
 * - `exports` - Export statements (when `config.exports = true`)
 * - `comments` - Comments (when `config.comments = true`)
 * - `docstrings` - Docstrings (when `config.docstrings = true`)
 * - `symbols` - Symbol definitions (when `config.symbols = true`)
 * - `diagnostics` - Parse errors (when `config.diagnostics = true`)
 * - `chunks` - Chunked code segments (when `config.chunk_max_size` is set)
 */
typedef struct TS_PACKProcessResult TS_PACKProcessResult;
/**
 * A parsed syntax tree. Cheap to clone (refcount bump).
 */
typedef struct TS_PACKTree TS_PACKTree;
/**
 * A cursor for traversing a `Tree`.
 */
typedef struct TS_PACKTreeCursor TS_PACKTreeCursor;
/**
 * Return the last error code (0 means no error).
 * # Safety
 * Caller must ensure all pointer arguments are valid or null.
 * This function does not allocate and returns no owned pointer.
 */
int32_t ts_pack_last_error_code(void);
/**
 * Return the last error message. The pointer is borrowed and valid until the next FFI call on this thread.
 * # Safety
 * Caller must ensure all pointer arguments are valid or null.
 * The returned pointer is borrowed from thread-local storage and must NOT be freed.
 */
const char *ts_pack_last_error_context(void);
/**
 * Serialize a `ProcessResult` to a JSON string. Returns null on failure.
 * # Safety
 * `ptr` must be a valid, non-null pointer returned by a `ts_pack` function.
 * The returned string must be freed with `ts_pack_free_string`.
 */
char *ts_pack_process_result_to_json(const TS_PACKProcessResult *ptr);
/**
 * Free a `ProcessResult` handle.
 * # Safety
 * Pointer must have been returned by this library, or be null.
 */
void ts_pack_process_result_free(TS_PACKProcessResult *ptr);
/**
 * Create a `PackConfig` from a JSON string. Returns null on failure.
 * # Safety
 * JSON string must be valid UTF-8 and null-terminated.
 * Returned handle must be freed with `ts_pack_pack_config_free`.
 */
TS_PACKPackConfig *ts_pack_pack_config_from_json(const char *json);
/**
 * Free a `PackConfig` handle.
 * # Safety
 * Pointer must have been returned by this library, or be null.
 */
void ts_pack_pack_config_free(TS_PACKPackConfig *ptr);
/**
 * Serialize a `Point` to a JSON string. Returns null on failure.
 * # Safety
 * `ptr` must be a valid, non-null pointer returned by a `ts_pack` function.
 * The returned string must be freed with `ts_pack_free_string`.
 */
char *ts_pack_point_to_json(const TS_PACKPoint *ptr);
/**
 * Free a `Point` handle.
 * # Safety
 * Pointer must have been returned by this library, or be null.
 */
void ts_pack_point_free(TS_PACKPoint *ptr);
/**
 * Serialize a `ByteRange` to a JSON string. Returns null on failure.
 * # Safety
 * `ptr` must be a valid, non-null pointer returned by a `ts_pack` function.
 * The returned string must be freed with `ts_pack_free_string`.
 */
char *ts_pack_byte_range_to_json(const TS_PACKByteRange *ptr);
/**
 * Free a `ByteRange` handle.
 * # Safety
 * Pointer must have been returned by this library, or be null.
 */
void ts_pack_byte_range_free(TS_PACKByteRange *ptr);
/**
 * Free a `Parser` handle.
 * # Safety
 * Pointer must have been returned by this library, or be null.
 */
void ts_pack_parser_free(TS_PACKParser *ptr);
/**
 * Free a `Tree` handle.
 * # Safety
 * Pointer must have been returned by this library, or be null.
 */
void ts_pack_tree_free(TS_PACKTree *ptr);
/**
 * Free a `Node` handle.
 * # Safety
 * Pointer must have been returned by this library, or be null.
 */
void ts_pack_node_free(TS_PACKNode *ptr);
/**
 * Free a `TreeCursor` handle.
 * # Safety
 * Pointer must have been returned by this library, or be null.
 */
void ts_pack_tree_cursor_free(TS_PACKTreeCursor *ptr);
/**
 * Create a `ProcessConfig` from a JSON string. Returns null on failure.
 * # Safety
 * JSON string must be valid UTF-8 and null-terminated.
 * Returned handle must be freed with `ts_pack_process_config_free`.
 */
TS_PACKProcessConfig *ts_pack_process_config_from_json(const char *json);
/**
 * Free a `ProcessConfig` handle.
 * # Safety
 * Pointer must have been returned by this library, or be null.
 */
void ts_pack_process_config_free(TS_PACKProcessConfig *ptr);
/**
 * Free a `LanguageRegistry` handle.
 * # Safety
 * Pointer must have been returned by this library, or be null.
 */
void ts_pack_language_registry_free(TS_PACKLanguageRegistry *ptr);
/**
 * Free a `DownloadManager` handle.
 * # Safety
 * Pointer must have been returned by this library, or be null.
 */
void ts_pack_download_manager_free(TS_PACKDownloadManager *ptr);
/**
 * List languages that are already downloaded and cached.
 * \note SAFETY: Caller must ensure all pointer arguments are valid or null. Returned pointers must be
 * freed with the appropriate free function.
 */
char *ts_pack_download_manager_installed_languages(const TS_PACKDownloadManager *this_);
/**
 * Download the platform bundle and extract every library file it contains.
 *
 * Unlike `Self.ensure_languages`, this does not check the manifest language list
 * against archive contents â it simply extracts all `.so`/`.dylib`/`.dll` files
 * from the bundle. Languages in the manifest that are missing from the archive
 * are silently ignored rather than returning an error.
 *
 * Returns the number of library files extracted (including those already cached).
 * \note SAFETY: Caller must ensure all pointer arguments are valid or null. Returned pointers must be
 * freed with the appropriate free function.
 */
uintptr_t ts_pack_download_manager_download_all_best_effort(const TS_PACKDownloadManager *this_);
/**
 * Remove all cached parser libraries.
 *
 * Acquires the cross-process lock so `clean_cache` cannot race a concurrent
 * downloader (avoids Windows sharing-violation errors against an in-flight
 * bundle write). The `.download.lock` file itself is **not** removed â it is
 * permanent infrastructure; deleting it could allow a concurrent process that
 * already opened the file to continue holding a stale lock handle while a new
 * process opens a fresh inode, breaking the mutual-exclusion guarantee.
 * \note SAFETY: Caller must ensure all pointer arguments are valid or null. Returned pointers must be
 * freed with the appropriate free function.
 */
int32_t ts_pack_download_manager_clean_cache(const TS_PACKDownloadManager *this_);
/**
 * Free a `Language` handle.
 * # Safety
 * Pointer must have been returned by this library, or be null.
 */
void ts_pack_language_free(TS_PACKLanguage *ptr);