packages/java/src/main/java/dev/kreuzberg/treesitterlanguagepack/NativeLib.java


  static final MethodHandle TS_PACK_DOWNLOAD_MANAGER_WITH_CACHE_DIR =
      LINKER.downcallHandle(
          LIB.find("ts_pack_download_manager_with_cache_dir").orElseThrow(),
          FunctionDescriptor.of(ValueLayout.ADDRESS, ValueLayout.ADDRESS, ValueLayout.ADDRESS));

  static final MethodHandle TS_PACK_DOWNLOAD_MANAGER_INSTALLED_LANGUAGES =
      LINKER.downcallHandle(
          LIB.find("ts_pack_download_manager_installed_languages").orElseThrow(),
          FunctionDescriptor.of(ValueLayout.ADDRESS, ValueLayout.ADDRESS));

  static final MethodHandle TS_PACK_DOWNLOAD_MANAGER_DOWNLOAD_ALL_BEST_EFFORT =
      LINKER.downcallHandle(
          LIB.find("ts_pack_download_manager_download_all_best_effort").orElseThrow(),
          FunctionDescriptor.of(ValueLayout.JAVA_LONG, ValueLayout.ADDRESS));

  static final MethodHandle TS_PACK_DOWNLOAD_MANAGER_CLEAN_CACHE =
      LINKER.downcallHandle(
          LIB.find("ts_pack_download_manager_clean_cache").orElseThrow(),
          FunctionDescriptor.ofVoid(ValueLayout.ADDRESS));

  static final MethodHandle TS_PACK_LAST_ERROR_CODE =
      LINKER.downcallHandle(
          LIB.find("ts_pack_last_error_code").orElseThrow(),
          FunctionDescriptor.of(ValueLayout.JAVA_INT));

  static final MethodHandle TS_PACK_LAST_ERROR_CONTEXT =
      LINKER.downcallHandle(
          LIB.find("ts_pack_last_error_context").orElseThrow(),
          FunctionDescriptor.of(ValueLayout.ADDRESS));

  static final MethodHandle TS_PACK_LANGUAGE_TO_JSON =
      LIB.find("ts_pack_language_to_json")
          .map(
              s ->
                  LINKER.downcallHandle(
                      s, FunctionDescriptor.of(ValueLayout.ADDRESS, ValueLayout.ADDRESS)))
          .orElse(null);

  static final MethodHandle TS_PACK_LANGUAGE_FREE =
      LINKER.downcallHandle(
          LIB.find("ts_pack_language_free").orElseThrow(),
          FunctionDescriptor.ofVoid(ValueLayout.ADDRESS));

  static final MethodHandle TS_PACK_PARSER_TO_JSON =
      LIB.find("ts_pack_parser_to_json")
          .map(
              s ->
                  LINKER.downcallHandle(
                      s, FunctionDescriptor.of(ValueLayout.ADDRESS, ValueLayout.ADDRESS)))
          .orElse(null);

  static final MethodHandle TS_PACK_PARSER_FREE =
      LINKER.downcallHandle(
          LIB.find("ts_pack_parser_free").orElseThrow(),
          FunctionDescriptor.ofVoid(ValueLayout.ADDRESS));

  static final MethodHandle TS_PACK_PROCESS_RESULT_TO_JSON =
      LIB.find("ts_pack_process_result_to_json")
          .map(
              s ->
                  LINKER.downcallHandle(
                      s, FunctionDescriptor.of(ValueLayout.ADDRESS, ValueLayout.ADDRESS)))
          .orElse(null);

  static final MethodHandle TS_PACK_PROCESS_RESULT_FREE =
      LINKER.downcallHandle(
          LIB.find("ts_pack_process_result_free").orElseThrow(),
          FunctionDescriptor.ofVoid(ValueLayout.ADDRESS));

  static final MethodHandle TS_PACK_PROCESS_CONFIG_FROM_JSON =
      LINKER.downcallHandle(
          LIB.find("ts_pack_process_config_from_json").orElseThrow(),
          FunctionDescriptor.of(ValueLayout.ADDRESS, ValueLayout.ADDRESS));

  static final MethodHandle TS_PACK_PROCESS_CONFIG_FREE =
      LINKER.downcallHandle(
          LIB.find("ts_pack_process_config_free").orElseThrow(),
          FunctionDescriptor.ofVoid(ValueLayout.ADDRESS));

  static final MethodHandle TS_PACK_PACK_CONFIG_FROM_JSON =
      LINKER.downcallHandle(
          LIB.find("ts_pack_pack_config_from_json").orElseThrow(),
          FunctionDescriptor.of(ValueLayout.ADDRESS, ValueLayout.ADDRESS));

  static final MethodHandle TS_PACK_PACK_CONFIG_FREE =
      LINKER.downcallHandle(
          LIB.find("ts_pack_pack_config_free").orElseThrow(),
          FunctionDescriptor.ofVoid(ValueLayout.ADDRESS));

  static final MethodHandle TS_PACK_TREE_TO_JSON =
      LIB.find("ts_pack_tree_to_json")
          .map(
              s ->
                  LINKER.downcallHandle(
                      s, FunctionDescriptor.of(ValueLayout.ADDRESS, ValueLayout.ADDRESS)))
          .orElse(null);

  static final MethodHandle TS_PACK_NODE_TO_JSON =
      LIB.find("ts_pack_node_to_json")
          .map(
              s ->
                  LINKER.downcallHandle(
                      s, FunctionDescriptor.of(ValueLayout.ADDRESS, ValueLayout.ADDRESS)))
          .orElse(null);

  static final MethodHandle TS_PACK_TREE_CURSOR_TO_JSON =
      LIB.find("ts_pack_tree_cursor_to_json")
          .map(
              s ->
                  LINKER.downcallHandle(
                      s, FunctionDescriptor.of(ValueLayout.ADDRESS, ValueLayout.ADDRESS)))
          .orElse(null);

  static final MethodHandle TS_PACK_BYTE_RANGE_TO_JSON =
      LIB.find("ts_pack_byte_range_to_json")
          .map(
              s ->
                  LINKER.downcallHandle(
                      s, FunctionDescriptor.of(ValueLayout.ADDRESS, ValueLayout.ADDRESS)))
          .orElse(null);

  static final MethodHandle TS_PACK_BYTE_RANGE_FREE =
      LINKER.downcallHandle(
          LIB.find("ts_pack_byte_range_free").orElseThrow(),
          FunctionDescriptor.ofVoid(ValueLayout.ADDRESS));

  static final MethodHandle TS_PACK_POINT_TO_JSON =
      LIB.find("ts_pack_point_to_json")
          .map(
              s ->
                  LINKER.downcallHandle(
                      s, FunctionDescriptor.of(ValueLayout.ADDRESS, ValueLayout.ADDRESS)))
          .orElse(null);

  static final MethodHandle TS_PACK_POINT_FREE =
      LINKER.downcallHandle(
          LIB.find("ts_pack_point_free").orElseThrow(),
          FunctionDescriptor.ofVoid(ValueLayout.ADDRESS));

  static final MethodHandle TS_PACK_LANGUAGE_REGISTRY_TO_JSON =
      LIB.find("ts_pack_language_registry_to_json")
          .map(
              s ->
                  LINKER.downcallHandle(
                      s, FunctionDescriptor.of(ValueLayout.ADDRESS, ValueLayout.ADDRESS)))
          .orElse(null);

  static final MethodHandle TS_PACK_DOWNLOAD_MANAGER_TO_JSON =
      LIB.find("ts_pack_download_manager_to_json")
          .map(
              s ->
                  LINKER.downcallHandle(
                      s, FunctionDescriptor.of(ValueLayout.ADDRESS, ValueLayout.ADDRESS)))
          .orElse(null);

  static final MethodHandle TS_PACK_TREE_FREE =
      LINKER.downcallHandle(
          LIB.find("ts_pack_tree_free").orElseThrow(),
          FunctionDescriptor.ofVoid(ValueLayout.ADDRESS));

  static final MethodHandle TS_PACK_NODE_FREE =
      LINKER.downcallHandle(
          LIB.find("ts_pack_node_free").orElseThrow(),
          FunctionDescriptor.ofVoid(ValueLayout.ADDRESS));

  static final MethodHandle TS_PACK_TREE_CURSOR_FREE =
      LINKER.downcallHandle(
          LIB.find("ts_pack_tree_cursor_free").orElseThrow(),
          FunctionDescriptor.ofVoid(ValueLayout.ADDRESS));

  static final MethodHandle TS_PACK_LANGUAGE_REGISTRY_FREE =
      LINKER.downcallHandle(
          LIB.find("ts_pack_language_registry_free").orElseThrow(),
          FunctionDescriptor.ofVoid(ValueLayout.ADDRESS));

  static final MethodHandle TS_PACK_DOWNLOAD_MANAGER_FREE =
      LINKER.downcallHandle(
          LIB.find("ts_pack_download_manager_free").orElseThrow(),
          FunctionDescriptor.ofVoid(ValueLayout.ADDRESS));
}
